external-crates/move/crates/move-compiler-transactional-tests/tests/control_flow/signed_int_loops.snap
---
source: crates/move-transactional-test-runner/src/framework.rs
---
processed 9 tasks

task 1, lines 4-15:
//# run
Error: error[E04024]: invalid usage of immutable variable
  ┌─ /var/folders/wq/yn9hqn9s71s8ktjc6z89b8wr0000gn/T/.tmpAIFwQ8:9:9
  │
7 │     let i: i32 = -5i32;
  │         - To use the variable mutably, it must be declared 'mut', e.g. 'mut i'
8 │     while (i < 5i32) {
9 │         i = i + 1i32;
  │         ^ Invalid assignment of immutable variable 'i'



task 2, lines 16-27:
//# run
Error: error[E04024]: invalid usage of immutable variable
   ┌─ /var/folders/wq/yn9hqn9s71s8ktjc6z89b8wr0000gn/T/.tmpBsNaFy:21:9
   │
19 │     let i: i32 = 5i32;
   │         - To use the variable mutably, it must be declared 'mut', e.g. 'mut i'
20 │     while (i > -5i32) {
21 │         i = i - 1i32;
   │         ^ Invalid assignment of immutable variable 'i'



task 3, lines 28-39:
//# run
Error: error[E04024]: invalid usage of immutable variable
   ┌─ /var/folders/wq/yn9hqn9s71s8ktjc6z89b8wr0000gn/T/.tmpngmbBR:33:9
   │
31 │     let i: i64 = 10i64;
   │         - To use the variable mutably, it must be declared 'mut', e.g. 'mut i'
32 │     while (i > -10i64) {
33 │         i = i - 2i64;
   │         ^ Invalid assignment of immutable variable 'i'



task 4, lines 40-54:
//# run
Error: error[E04024]: invalid usage of immutable variable
   ┌─ /var/folders/wq/yn9hqn9s71s8ktjc6z89b8wr0000gn/T/.tmpqksqYw:46:9
   │
43 │     let sum: i32 = 0i32;
   │         --- To use the variable mutably, it must be declared 'mut', e.g. 'mut sum'
   ·
46 │         sum = sum + i;
   │         ^^^ Invalid assignment of immutable variable 'sum'

error[E04024]: invalid usage of immutable variable
   ┌─ /var/folders/wq/yn9hqn9s71s8ktjc6z89b8wr0000gn/T/.tmpqksqYw:47:9
   │
44 │     let i: i32 = -5i32;
   │         - To use the variable mutably, it must be declared 'mut', e.g. 'mut i'
   ·
47 │         i = i + 1i32;
   │         ^ Invalid assignment of immutable variable 'i'



task 5, lines 55-71:
//# run
Error: error[E04024]: invalid usage of immutable variable
   ┌─ /var/folders/wq/yn9hqn9s71s8ktjc6z89b8wr0000gn/T/.tmpxjR7TX:62:13
   │
58 │     let sum: i32 = 0i32;
   │         --- To use the variable mutably, it must be declared 'mut', e.g. 'mut sum'
   ·
62 │             sum = sum + i;
   │             ^^^ Invalid assignment of immutable variable 'sum'

error[E04024]: invalid usage of immutable variable
   ┌─ /var/folders/wq/yn9hqn9s71s8ktjc6z89b8wr0000gn/T/.tmpxjR7TX:64:9
   │
59 │     let i: i32 = -5i32;
   │         - To use the variable mutably, it must be declared 'mut', e.g. 'mut i'
   ·
64 │         i = i + 1i32;
   │         ^ Invalid assignment of immutable variable 'i'



task 6, lines 72-85:
//# run
Error: error[E04024]: invalid usage of immutable variable
   ┌─ /var/folders/wq/yn9hqn9s71s8ktjc6z89b8wr0000gn/T/.tmpqRMXJo:78:9
   │
76 │     let count: i8 = 0i8;
   │         ----- To use the variable mutably, it must be declared 'mut', e.g. 'mut count'
77 │     while (i < 10i8) {
78 │         count = count + 1i8;
   │         ^^^^^ Invalid assignment of immutable variable 'count'

error[E04024]: invalid usage of immutable variable
   ┌─ /var/folders/wq/yn9hqn9s71s8ktjc6z89b8wr0000gn/T/.tmpqRMXJo:79:9
   │
75 │     let i: i8 = -10i8;
   │         - To use the variable mutably, it must be declared 'mut', e.g. 'mut i'
   ·
79 │         i = i + 1i8;
   │         ^ Invalid assignment of immutable variable 'i'



task 7, lines 86-104:
//# run
Error: error[E04024]: invalid usage of immutable variable
   ┌─ /var/folders/wq/yn9hqn9s71s8ktjc6z89b8wr0000gn/T/.tmpTk15Rr:94:13
   │
89 │     let sum: i32 = 0i32;
   │         --- To use the variable mutably, it must be declared 'mut', e.g. 'mut sum'
   ·
94 │             sum = sum + i * j;
   │             ^^^ Invalid assignment of immutable variable 'sum'

error[E04024]: invalid usage of immutable variable
   ┌─ /var/folders/wq/yn9hqn9s71s8ktjc6z89b8wr0000gn/T/.tmpTk15Rr:95:13
   │
92 │         let j: i32 = -2i32;
   │             - To use the variable mutably, it must be declared 'mut', e.g. 'mut j'
   ·
95 │             j = j + 1i32;
   │             ^ Invalid assignment of immutable variable 'j'

error[E04024]: invalid usage of immutable variable
   ┌─ /var/folders/wq/yn9hqn9s71s8ktjc6z89b8wr0000gn/T/.tmpTk15Rr:97:9
   │
90 │     let i: i32 = -2i32;
   │         - To use the variable mutably, it must be declared 'mut', e.g. 'mut i'
   ·
97 │         i = i + 1i32;
   │         ^ Invalid assignment of immutable variable 'i'



task 8, lines 105-115:
//# run
Error: error[E04024]: invalid usage of immutable variable
    ┌─ /var/folders/wq/yn9hqn9s71s8ktjc6z89b8wr0000gn/T/.tmphOkMnU:110:9
    │
108 │     let i: i32 = 0i32;
    │         - To use the variable mutably, it must be declared 'mut', e.g. 'mut i'
109 │     while (true) {
110 │         i = i - 1i32;
    │         ^ Invalid assignment of immutable variable 'i'
